Changed url to uri