@@ -3,7 +3,8 @@ package bsu.edu.cs;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URLConnection;
 import java.net.URLEncoder;
 import java.nio.charset.Charset;
@@ -27,8 +28,8 @@ public class WikipediaRevisionReader {
         String urlString = String.format("https://en.wikipedia.org/w/api.php?action=query&format=json&prop=revisions&titles=Zappa&rvprop=timestamp|user&rvlimit=4&redirects", articleTitle);
         String encodedUrlString = URLEncoder.encode(urlString, Charset.defaultCharset());
         try {
-            URL url = new URL(encodedUrlString);
-            URLConnection connection = url.openConnection();
+            URI uri = new URI(encodedUrlString);
+            URLConnection connection = uri.toURL().openConnection();
             connection.setRequestProperty("User-Agent", "WikipediaRevisionReader/0.1 (https://youtube.com/paulgestwicki; pvgestwicki@bsu.edu)");
             InputStream InputStream = connection.getInputStream();
             WikipediaRevisionParser parser = new WikipediaRevisionParser();
